automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "py_list = np.array"
+    "py_list = np.array([0,1,2,3,4])\n",
+    "py_range = np.array()"
    ]
   },
   {
