automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "py_list = np.array([0,1,2,3,4])\n",
-    "py_range = np.array()"
+    "py_range = np.array(range(5))\n",
+    "print(py_list)"
    ]
   },
   {
