automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,14 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-f7a0b4f76556>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-f7a0b4f76556>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    py_range = np.array(range(5))\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "py_list = np.array([0,1,2,3,4])\n",
+    "py_list = [0,1,2,3,4\n",
     "py_range = np.array(range(5))\n",
-    "print(py_list)"
+    "print(py_list)\n",
+    "print(py_range)"
    ]
   },
   {
