automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,15 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.651 , 1.7272, 1.8542, 1.905 , 1.9812])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
     "#Your code here\n",
-    "arr_height_inches = np.array(list_height_inches)"
+    "arr_height_inches = np.array(list_height_inches)\n",
+    "arr_height_inches * 0.0254"
    ]
   },
   {
