--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,8 @@
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
     "#your code here\n",
-    "ar"
+    "arr_weight = np.array(list_weight_pounds)\n",
+    "arr_weight * 2"
    ]
   },
   {
