automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -143,18 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([330.69 , 308.644, 485.012, 451.943, 584.219])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
     "#your code here\n",
     "arr_weight = np.array(list_weight_pounds)\n",
-    "arr_weight * 2"
+    "arr_weight * 2.2046"
    ]
   },
   {
