automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "#Your code here\n",
     "arr_height_inches = np.array(list_height_inches)\n",
-    "arr_height_inches * 0.0254"
+    "weight_kg = arr_height_inches * 0.0254"
    ]
   },
   {
