--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "array([1.651 , 1.7272, 1.8542, 1.905 , 1.9812])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,8 @@
     "\n",
     "#Your code here\n",
     "arr_height_inches = np.array(list_height_inches)\n",
-    "weight_kg = arr_height_inches * 0.0254"
+    "height_meters = arr_height_inches * 0.0254\n",
+    "height_meters"
    ]
   },
   {
@@ -163,7 +164,8 @@
     "\n",
     "#your code here\n",
     "arr_weight = np.array(list_weight_pounds)\n",
-    "arr_weight * 2.2046"
+    "arr_weight * 2.2046\n",
+    "weight_kg = "
    ]
   },
   {
