automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "array([330.69 , 308.644, 485.012, 451.943, 584.219])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +164,8 @@
     "\n",
     "#your code here\n",
     "arr_weight = np.array(list_weight_pounds)\n",
-    "arr_weight * 2.2046\n",
-    "weight_kg = "
+    "weight_kg = arr_weight * 2.2046\n",
+    "weight_kg"
    ]
   },
   {
