automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "BMI = weight_kg / np."
    ]
   },
   {
