automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "BMI = weight_kg / np."
+    "BMI = weight_kg / np.square(height_meters)"
    ]
   },
   {
