automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,14 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([121.31846749, 103.46002526, 141.07151502, 124.53565352,\n",
+       "       148.8397865 ])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "BMI = weight_kg / np.square(height_meters)"
+    "BMI = weight_kg / np.square(height_meters)\n",
+    "BMI"
    ]
   },
   {
