automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,16 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([330.69 , 308.644, 485.012, 451.943, 584.219])"
+       "array([ 68.03955366,  63.50358342,  99.79134537,  92.98739   ,\n",
+       "       120.20321147])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +165,7 @@
     "\n",
     "#your code here\n",
     "arr_weight = np.array(list_weight_pounds)\n",
-    "weight_kg = arr_weight * 2.2046\n",
+    "weight_kg = arr_weight / 2.2046\n",
     "weight_kg"
    ]
   },
@@ -185,17 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([121.31846749, 103.46002526, 141.07151502, 124.53565352,\n",
-       "       148.8397865 ])"
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,17 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([121.31846749, 103.46002526, 141.07151502, 124.53565352,\n",
-       "       148.8397865 ])"
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
